--- a/campground-service.yaml
+++ b/campground-service.yaml
@@ -72,7 +72,7 @@ spec:
                   name: env-config
                   key: AWS_SECRET_ACCESS_KEY
             - name: AUTH_SERVICE_URL
-              value: "http://localhost:84/api/v1/auth"
+              value: "http://auth-service.default.svc.cluster.local:84/api/v1/auth"
 
 ---
 
