--- a/llm-chat-service.yaml
+++ b/llm-chat-service.yaml
@@ -47,7 +47,7 @@ spec:
                   name: env-config
                   key: HOST
             - name: AUTH_SERVICE_URL
-              value: "http://localhost:84/api/v1/auth"
+              value: "http://auth-service.default.svc.cluster.local:84/api/v1/auth"
 
 ---
 
