--- a/mail-service.yaml
+++ b/mail-service.yaml
@@ -57,7 +57,7 @@ spec:
                   name: env-config
                   key: AUTH_PASS
             - name: AUTH_SERVICE_URL
-              value: "http://localhost:84/api/v1/auth"
+              value: "http://auth-service.default.svc.cluster.local:84/api/v1/auth"
 
 ---
 
