--- a/mail-service.yaml
+++ b/mail-service.yaml
@@ -42,10 +42,7 @@ spec:
                   name: env-config
                   key: JWT_COOKIE_EXPIRE
             - name: HOST
-              valueFrom:
-                configMapKeyRef:
-                  name: env-config
-                  key: HOST
+              value: "http://mail-service.default.svc.cluster.local"
             - name: AUTH_EMAIL
               valueFrom:
                 configMapKeyRef:
