--- a/auth-service.yaml
+++ b/auth-service.yaml
@@ -69,7 +69,7 @@ spec:
                   name: env-config
                   key: AWS_SECRET_ACCESS_KEY
             - name: EMAIL_SERVICE_URL
-              value: "http://mail-service.my-app.svc.cluster.local:81"
+              value: "http://mail-service.default.svc.cluster.local:83/api/v1"
 
 ---
 
